Wed Mar  8 16:05:44 GMT 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Fix potential DoS discovered in Vector Data Adobe
				Photoshop 7.0 files by Andy Fiddaman
				<clam*fiddaman.net>

Wed Mar  8 14:25:14 CET 2006 (tk)
---------------------------------
  * freshclam/manager.c: if possible, use percent idicator instead of rotor
			 Patch by Robert Hogan <robert*roberthogan.net>

Tue Mar  7 19:56:58 CET 2006 (tk)
---------------------------------
  * shared/cfgparser.c: strip newlines from FULLSTR args

Tue Mar  7 11:04:37 CET 2006 (tk)
---------------------------------
  * libclamav/zziplib: fix compiler warnings (patch by Stephen Gran)

Wed Feb 15 01:39:12 CET 2006 (tk)
---------------------------------
  * libclamav: simplify internal function declarations by passing a context
	       structure. Patch by Andrey J. Melnikoff (TEMHOTA)
	       <temnota*kmv.ru>

Thu Feb  9 21:42:22 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Improved handling of messages with no body

Tue Feb  7 11:34:17 GMT 2006 (njh)
----------------------------------
  * libclamav/message.c:	Some Trojan.Downloader.Small-1011 were not
					being spotted - reported by Diego

Sun Feb  5 13:56:56 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Added --template-headers option, based on a whishlist
				by Denis Eremenko <moonshade*mail.kz> for
				the support of foreign language and HTML
				emails in --template-file

Sun Feb  5 13:29:42 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Correct the error message if the given whitelistFile
				doesn't exist

Thu Feb  2 14:36:53 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Added defensive programming against multiple MAIL FROM
				calls.
			Added debug information when --max-children throttle
				is lifted

Mon Jan 30 21:10:57 CET 2006 (tk)
---------------------------------
  * libclamav/sis.c: handle empty files in SIS archives
